# wastewater-pathogen-data

./: .gitignore  2025_sickness_absence_in_the_civil_service_data_tables.ods  Data_Analysis_Respiratory_Illness.ipynb  Journeys_2025_2026 .csv  README.md  XGBoost_regression.py  add_seasons.py  app.py  ask_AI.py  big_spine.csv  clinical_sources.csv  create_big_csv.py  cut_to_one_year.py  download_failures.json  manifest.json  meantemp-daily-totals.csv  meantemp_daily_totals.txt  merge_csv.py  merged_data.csv  output.txt  predicted_sources.csv  predictive_sources.csv  pyproject.toml  requirements.txt  seasonal_features.csv  sources.csv  time_series_GB_20210630-1345_20260630-1345.csv  time_series_GB_20210630-1348_20260630-1348 (1).csv  time_series_GB_20210630-1348_20260630-1348 (2).csv  time_series_GB_20210630-1350_20260630-1350.csv  time_series_GB_20210630-1351_20260630-1351 (1).csv  time_series_GB_20210630-1351_20260630-1351 (2).csv  time_series_GB_20210630-1351_20260630-1351.csv  time_series_GB_20210630-1353_20260630-1353.csv  time_series_GB_20210630-1354_20260630-1354 (1).csv  ukhsa-chart-Acute-Respiratory-Infection-Syndromic-NHS-111-calls-Daily.csv  ukhsa-chart-Influenza-Like-Syndromic-Emergency-Department-Admissions-Daily.csv  ukhsa-chart-Lower-Respiratory-Tract-Infection-GP-Hours-Daily.csv  ukhsa-chart-Upper-Respiratory-Tract-Infection-GP-Hours-Daily.csv  ukhsa-chart-download(1).csv  (+3 more)
US data/: AgeViewByWeek confirmed flu cases.csv  FluSurveillance_Custom_Download_Data.csv  Resp_ED_Count_Weekly_National-Emergency dept visits for resp illness.csv
configs/: storage.yaml
(+196 files in other folders)
