[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wastewater-pathogen-data"
version = "0.1.0"
description = "Helpers and notebooks for analysing wastewater respiratory pathogen data."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pyarrow>=15.0",
  "scipy>=1.12",
  "statsmodels>=0.14",
  "scikit-learn>=1.4",
  "streamlit>=1.37",
  "plotly>=5.20",
  "openai>=1.0",
  "owid-catalog>=1.0",
  "pytrends>=4.9",
]

[tool.setuptools.packages.find]
where = ["src"]
